add content and styling to the cool things

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 H.K.H. Kronprinsessan</h1>
             <h2>En Stor Internationellt fredsarbete</h2>
             <p>VICTORIA Ingrid Alice Désirée, Sveriges Kronprinsessa, Hertiginna av Västergötland, född den 14 juli
-                1977.</p>
-            <p>
+                1977.
                 H.K.H. Kronprinsessans uppgifter som tronföljare
                 Om konungen eller drottning som är statschef är förhindrad att fullgöra sina uppgifter, inträder enligt
                 gällande tronföljd medlem av konungahuset, som inte är förhindrad, för att som tillfällig
@@ -28,13 +27,50 @@
             <P>- 5. kap. 4 § Regeringsformen</P>
             <h3>Topp 3 Coolaste Saker Kronprinsessan Har Gjort</h3>
             <ul>
-                <li>Internationell miljöadvokacy</li>
-                <li>Vandring genom Sverige</li>
-                <li>Främjande av ungdomars hälsa och välbefinnande</li>
+                <li>
+                    <h3>Internationell miljöadvokacy</h3>
+                    <p>Kronprinsessans engagemang i havs- och fiskefrågor har haft en
+                        betydande roll i grundandet av Seafood
+                        Business for Ocean Stewardship, SeaBOS, där världens tio största fisk- och sjömatsföretag med
+                        stöd
+                        av
+                        forskare samverkar för att ställa om till en mer hållbar industri.</p>
+                </li>
+
+
+                <li>
+                    <h3>Vandring genom Sverige </h3>
+                    <p> Kronprinsessan har sedan barnsben tyckt om att röra sig ute i naturen.
+                        Tidigt fick Kronprinsessan,
+                        tillsammans med sina syskon, lära sig om vikten av värnandet av vår natur och bevarandet av den
+                        biologiska mångfalden – frågor som än i dag engagerar henne.
+
+                        I samband med sin 40-årsdag genomförde Kronprinsessan vandringar i Sveriges alla landskap. Genom
+                        sina
+                        vandringar ville Kronprinsessan uppleva olika delar av Sverige under olika årstider, synliggöra
+                        den
+                        skatt som den svenska naturen är för alla som lever och verkar i landet, samt belysa värdet av
+                        friluftsliv och rörelse.</p>
+                </li>
+
+
+                <li>
+                    <h3>Främjande av ungdomars hälsa och välbefinnande </h3>
+                    <p>
+                        Kronprinsessan har likaså ett stort engagemang för ungas hälsa och välmående. I samband med
+                        bröllopet år
+                        2010 bildade brudparet Kronprinsessparets stiftelse vars syfte är att motverka utanförskap och
+                        främja
+                        god hälsa bland barn och ungdomar i Sverige. Stiftelsens ambition är att alla barn, oavsett
+                        förutsättningar, ska få växa upp till trygga och starka individer med en positiv framtidstro.
+                    </p>
+                </li>
+
+
             </ul>
         </section>
         <section class="gallery">
-            <h3>Galleri</h3>
+            <!-- <h3>Galleri</h3> -->
             <div class="gallery-images">
                 <img src="https://www.kungahuset.se/images/200.4f523ba817f4470a4bb12453/1648133566875/20180924_KRPR_KRP_Haakon_01_Foto_Erik_Abild_Norska_hovet-1000.jpg"
                     alt="I september 2018 besökte Kronprinsessan New York, där Kronprinsessan bland annat deltog vid FN:s generalsekreterare Antonio Guterres möte med ambassadörerna för FN:s globala mål. Foto: Norska hovet"
