fix the footer link description

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                     class="gallery-image">
             </div>
         </section>
+        <footer>
+            <a href="https://www.kungahuset.se/kungl.-huset/h.k.h.-kronprinsessan">Läs mer på kungahusets sida.</a>
+        </footer>
     </main>
-    <footer>
-        <a href="https://www.kungahuset.se/kungl.-huset/h.k.h.-kronprinsessan">läs mer</a>
-    </footer>
+   
 </body>
 
 </html>
